repaired spacing on front page

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -2672,8 +2672,8 @@ body.home > footer:before {
 }
 
 figure.diagram {
-    width:100%;
-    height:80%;
+    width:80%;
+    height:100%;
     padding:1em;}
 figure.diagram figcaption {
     text-align:center;
